--- a/.github/workflows/cpu_test.yml
+++ b/.github/workflows/cpu_test.yml
@@ -1,10 +1,7 @@
 name: Test MDL on CPU
 
-on: 
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on:
+  [workflow_dispatch]
 
 jobs:
   build-linux:
